force-app/main/default/objects/B25__AbrLocation__c/B25__AbrLocation__c.object-meta.xml
<CustomObject>
    <description>Configures the Resources on which an Automated Booking Rule applies.</description>
    <label>Automated Booking Rule Location</label>
    <nameField>
        <displayFormat>ABRL-{000000000}</displayFormat>
        <label>Automated Booking Rule Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automated Booking Rule Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>