force-app/main/default/objects/B25__AbrLocation__c/fields/B25__AutomatedBookingRule__c.field-meta.xml
<CustomField>
    <fullName>B25__AutomatedBookingRule__c</fullName>
    <description>The ABR record to which an ABR Location record belongs.</description>
    <inlineHelpText>L’enregistrement ABR auquel appartient un enregistrement ABR d’emplacement.</inlineHelpText>
    <label>Automated Booking Rule</label>
    <referenceTo>B25__AutomatedBookingRule__c</referenceTo>
    <relationshipLabel>Automated Booking Rule Locations</relationshipLabel>
    <relationshipName>AbrLocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>