force-app/main/default/objects/B25__AbrLocation__c/fields/B25__PreferenceOrder__c.field-meta.xml
<CustomField>
    <fullName>B25__PreferenceOrder__c</fullName>
    <description>The algorithm will try to find a location for the Reservation based on the Preference Order ranked from low to high.</description>
    <inlineHelpText>L’algorithme essaiera de trouver un emplacement pour la réservation en fonction de l’ordre de préférence classé de bas en haut.</inlineHelpText>
    <label>Preference Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>