force-app/main/default/objects/B25__AbrLocation__c/fields/B25__Resource__c.field-meta.xml
<CustomField>
    <fullName>B25__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ABR will only target a specific Resource and its children.</description>
    <inlineHelpText>L’ABR ne ciblera qu’une ressource spécifique et ses enfants.</inlineHelpText>
    <label>Target Resource</label>
    <referenceTo>B25__Resource__c</referenceTo>
    <relationshipLabel>Preferred Locations</relationshipLabel>
    <relationshipName>AbrLocations</relationshipName>
    <type>Lookup</type>
</CustomField>