force-app/main/default/objects/B25__AbrLocation__c/fields/B25__Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ABR will only target a specific Resource Type.</description>
    <inlineHelpText>L’ABR ne ciblera qu’un type de ressource spécifique.</inlineHelpText>
    <label>Target Resource Type</label>
    <referenceTo>B25__Resource_Type__c</referenceTo>
    <relationshipLabel>Preferred Locations</relationshipLabel>
    <relationshipName>AbrLocations</relationshipName>
    <type>Lookup</type>
</CustomField>